* updated plugins in pom file: assertj, webdrivermanager, log4j, mockito * code refactoring: vars added + added team & personal test suite