@@ -18,17 +18,17 @@
 		<maven.compiler.version>3.8.0</maven.compiler.version>
 		<maven.enforcer.version>3.0.0-M2</maven.enforcer.version>
 		<maven.surefire.version>3.0.0-M3</maven.surefire.version>
-		<assertj.version>3.11.1</assertj.version>
-		<webdrivermanager.version>3.2.0</webdrivermanager.version>
+		<assertj.version>3.12.1</assertj.version>
+		<webdrivermanager.version>3.3.0</webdrivermanager.version>
 		<logback.version>1.2.3</logback.version>
-		<log4j.version>2.11.1</log4j.version>
+		<log4j.version>2.11.2</log4j.version>
 		<selenium.version>3.141.59</selenium.version>
 		<testng.version>6.14.3</testng.version>
 		<apache.poi.version>4.0.1</apache.poi.version>
 		<versions.maven.version>2.7</versions.maven.version>
 		<javassist.version>3.24.1-GA</javassist.version>
 		<cglib.nodep.version>3.2.10</cglib.nodep.version>
-		<mockito.core.version>2.24.0</mockito.core.version>
+		<mockito.core.version>2.25.0</mockito.core.version>
 		<ow2.asm.version>6.2.1</ow2.asm.version>
 	</properties>
 
@@ -123,6 +123,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven.surefire.version}</version>
+				<configuration>
+					<argLine>--illegal-access=permit</argLine>
+				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.ow2.asm</groupId>
